# pkru-safe-example

./: Cargo.toml  README.md
pkru-unsafe-lib/: Cargo.toml  build.rs
pkru-unsafe-lib/mem-write/: mem-write.c
pkru-unsafe-lib/src/: lib.rs
src/: main.rs
