[package]
name = "pkru-safe-example"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 1
lto = true
codegen-units = 1

[profile.release]
opt-level = 1
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkru_unsafe_lib = { path = "pkru-unsafe-lib" }
